[fix]collapse in 404 page and change aliases

--- a/src/client/scss/notfound.scss
+++ b/src/client/scss/notfound.scss
@@ -1,22 +1,9 @@
-body {
-    background: #000;
-    color: rgba(0, 0, 0, 0.87);
-    font-family: Roboto, Helvetica, Arial, sans-serif;
-    margin: 0;
-    padding: 0;
-}
-
-header, .footer {
-    display: none;
-}
-
 #message {
     background: white;
     max-width: 360px;
     margin: 280px auto 16px;
     padding: 32px 24px 16px;
     border-radius: 3px;
-    text-align: center;
     position: relative;
         bottom: 100px;
 }
